--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <script
   src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
 ></script>
+  <!-- Leaflet Routing Machine + ORS plugin -->
+<script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.js"></script>
+<script src="https://unpkg.com/lrm-ors/dist/lrm-ors.min.js"></script>
 
   <link rel="stylesheet" href="style.css" />
 </head>
