--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
 <head>
+  <link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet-geosearch@3.1.0/dist/geosearch.css"
+/>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PathFinder</title>
@@ -62,5 +67,8 @@
 
   <!-- Your Script -->
   <script src="script.js"></script>
+
+  <script src="https://unpkg.com/leaflet-geosearch@3.1.0/dist/bundle.min.js"></script>
+
 </body>
 </html>
