--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     <p>Accessible Route Planner for People with Mobility Challenges</p>
   </header>
 
+  <div style="padding: 10px; text-align: center;">
+  <input type="text" id="start" placeholder="Start Location" />
+  <input type="text" id="end" placeholder="End Location" />
+  <button id="routeBtn">Get Route</button>
+</div>
+
   <main>
     <div id="route-inputs">
   <input type="text" id="start" placeholder="Enter start location..." />
