--- a/index.html
+++ b/index.html
@@ -6,38 +6,33 @@
   <title>PathFinder</title>
 
   <!-- Leaflet CSS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <!-- Leaflet Routing Machine CSS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
   <!-- Leaflet Control Geocoder CSS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
   <!-- GeoSearch CSS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet-geosearch@3.1.0/dist/geosearch.css"
-  />
-  <!-- Your Custom Styles -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@3.1.0/dist/geosearch.css" />
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
     <h1>PathFinder</h1>
     <p>Accessible Route Planner for People with Mobility Challenges</p>
   </header>
 
-  <!-- Route Input Fields -->
-  <div style="padding: 10px; text-align: center;">
-    <input type="text" id="start" placeholder="Start Location" />
-    <input type="text" id="end" placeholder="End Location" />
+  <!-- Input Section -->
+  <div class="input-container">
+    <div class="input-box">
+      <input type="text" id="start" placeholder="Start Location" autocomplete="off" />
+      <div id="start-suggestions"></div>
+    </div>
+    <div class="input-box">
+      <input type="text" id="end" placeholder="End Location" autocomplete="off" />
+      <div id="end-suggestions"></div>
+    </div>
     <button id="routeBtn">Get Route</button>
   </div>
 
@@ -50,13 +45,13 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <!-- Leaflet Routing Machine JS -->
   <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.js"></script>
-  <!-- OpenRouteService plugin -->
+  <!-- ORS Plugin -->
   <script src="https://unpkg.com/lrm-ors/dist/lrm-ors.min.js"></script>
   <!-- Control Geocoder -->
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
   <!-- GeoSearch -->
   <script src="https://unpkg.com/leaflet-geosearch@3.1.0/dist/bundle.min.js"></script>
-  <!-- Your Custom Script -->
+  <!-- Custom Script -->
   <script src="script.js"></script>
 </body>
 </html>
