--- a/index.html
+++ b/index.html
@@ -7,51 +7,49 @@
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <!-- Leaflet Routing Machine CSS -->
+  <!-- Routing Machine CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
-  <!-- Leaflet Control Geocoder CSS -->
+  <!-- Control Geocoder CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
   <!-- GeoSearch CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@3.1.0/dist/geosearch.css" />
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
   <header>
     <h1>PathFinder</h1>
     <p>Accessible Route Planner for People with Mobility Challenges</p>
   </header>
 
-  <!-- Input Section -->
+  <!-- Input Controls -->
   <div class="input-container">
     <div class="input-box">
-      <input type="text" id="start" placeholder="Start Location" autocomplete="off" />
-      <div id="start-suggestions"></div>
+      <input type="text" id="start" placeholder="Start Location" />
     </div>
     <div class="input-box">
-      <input type="text" id="end" placeholder="End Location" autocomplete="off" />
-      <div id="end-suggestions"></div>
+      <input type="text" id="end" placeholder="End Location" />
     </div>
     <button id="routeBtn">Get Route</button>
+    <button id="showPOIsBtn">Show Accessible Places</button>
   </div>
 
-  <!-- Map Display -->
+  <!-- Map -->
   <main>
     <div id="map">Loading map...</div>
   </main>
 
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <!-- Leaflet Routing Machine JS -->
+  <!-- Routing Machine JS -->
   <script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.js"></script>
-  <!-- ORS Plugin -->
+  <!-- ORS plugin -->
   <script src="https://unpkg.com/lrm-ors/dist/lrm-ors.min.js"></script>
   <!-- Control Geocoder -->
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
   <!-- GeoSearch -->
   <script src="https://unpkg.com/leaflet-geosearch@3.1.0/dist/bundle.min.js"></script>
-  <!-- Custom Script -->
+  <!-- Your JS -->
   <script src="script.js"></script>
 </body>
 </html>
