--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine-openrouteservice/dist/lrm-openrouteservice.js"></script>
-  <script src="https://unpkg.com/@geosearch/core@latest"></script>
-  <script src="https://unpkg.com/@geosearch/openstreetmap@latest"></script>
+  <script src="https://unpkg.com/leaflet-geosearch@3.11.0/dist/bundle.min.js"></script>
+
 </head>
 <body>
   <header>
