--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
   <script src="https://unpkg.com/leaflet-routing-machine-openrouteservice/dist/lrm-openrouteservice.js"></script>
   <script src="https://unpkg.com/leaflet-geosearch@3.11.0/dist/bundle.min.js"></script>
+  <!-- Leaflet GeoSearch CSS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@3.1.0/dist/geosearch.css" />
+
+<!-- Leaflet GeoSearch JS -->
+<script src="https://unpkg.com/leaflet-geosearch@3.1.0/dist/bundle.min.js"></script>
 </head>
 <body>
   <header>
@@ -35,5 +40,17 @@
   <div id="map"></div>
 
   <script src="script.js?v=2"></script>
+  <!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+<!-- Leaflet Routing Machine -->
+<script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.min.js"></script>
+
+<!-- GeoSearch JS -->
+<script src="https://unpkg.com/leaflet-geosearch@3.1.0/dist/bundle.min.js"></script>
+
+<!-- Your custom script -->
+<script src="script.js"></script>
+
 </body>
 </html>
